--- a/prototyp/otmp.css
+++ b/prototyp/otmp.css
@@ -1,6 +1,8 @@
-<!-- $ID$ -->
+/* $Id: otmp.css,v 1.2 2001/11/11 13:52:34 hifix Exp $ */
 .logo {  font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold}
 td {  font-family: Arial, Helvetica, sans-serif; font-size: smaller}
 .footer {  font-size: xx-small; color: #333333; text-decoration: none}
 body {  font-family: Arial, Helvetica, sans-serif}
 
+.tbl_btn {  font-size: xx-small}
+p {  font-family: Arial, Helvetica, sans-serif}
