--- a/Release1/otmp.css
+++ b/Release1/otmp.css
@@ -1,4 +1,4 @@
-/* $Id: otmp.css,v 1.2 2001/11/23 08:03:04 darkpact Exp $ */
+/* $Id: otmp.css,v 1.3 2001/11/25 23:20:02 hifix Exp $ */
 .logo {  font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold}
 td {  font-family: Arial, Helvetica, sans-serif; font-size: smaller}
 .footer {  font-size: xx-small; color: #333333; text-decoration: none}
@@ -6,3 +6,5 @@ body {  font-family: Arial, Helvetica, sans-serif}
 
 .tbl_btn {  font-size: xx-small}
 p {  font-family: Arial, Helvetica, sans-serif}
+
+.warning { color: red }
