--- a/Release1/otmp.css
+++ b/Release1/otmp.css
@@ -1,4 +1,4 @@
-/* $Id: otmp.css,v 1.3 2001/11/25 23:20:02 hifix Exp $ */
+/* $Id: otmp.css,v 1.4 2001/12/06 22:39:57 darkpact Exp $ */
 .logo {  font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold}
 td {  font-family: Arial, Helvetica, sans-serif; font-size: smaller}
 .footer {  font-size: xx-small; color: #333333; text-decoration: none}
@@ -8,3 +8,9 @@ body {  font-family: Arial, Helvetica, sans-serif}
 p {  font-family: Arial, Helvetica, sans-serif}
 
 .warning { color: red }
+.tr_red_a {bgcolor: #FFCCCC}
+.tr_red_b {bgcolor: #FFAACC}
+.tr_green_a {bgcolor: #CCFFCC}
+.tr_green_b {bgcolor: #CCFFAA}
+.tr_blue_a {bgcolor: #CCCCFF}
+.tr_blue_b {bgcolor: #AACCFF}
