--- a/Release1/otmp.css
+++ b/Release1/otmp.css
@@ -1,16 +1,10 @@
-/* $Id: otmp.css,v 1.5 2001/12/10 22:06:12 darkpact Exp $ */
-.logo {  font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold}
-td {  font-family: Arial, Helvetica, sans-serif; font-size: smaller}
-.footer {  font-size: xx-small; color: #333333;  text-decoration: none}
-body {  font-family: Arial, Helvetica, sans-serif}
+/* $Id: otmp.css,v 1.6 2001/12/14 09:36:00 darkpact Exp $ */
 
-.tbl_btn {  font-size: xx-small}
-p {  font-family: Arial, Helvetica, sans-serif}
+.logo {font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold}
+.footer {font-size: xx-small; color: #333333;  text-decoration: none}
+.tbl_btn {font-size: xx-small}
+.warning {color: red}
 
-.warning { color: red }
-.tr_red_a {bgcolor: #FFCCCC}
-.tr_red_b {bgcolor: #FFAACC}
-.tr_green_a {bgcolor: #CCFFCC}
-.tr_green_b {bgcolor: #CCFFAA}
-.tr_blue_a {bgcolor: #CCCCFF}
-.tr_blue_b {bgcolor: #AACCFF}
+td {font-family: Arial, Helvetica, sans-serif; font-size: smaller}
+body {font-family: Arial, Helvetica, sans-serif}
+p {font-family: Arial, Helvetica, sans-serif font-size: smaller}
